--- a/src/app/template/navbar/navbar.component.html
+++ b/src/app/template/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <img src="assets/logo2.png">
     <a class="navbar-brand" href="index.html">Meus Clientes</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
         <i class="fas fa-bars"></i>
