--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -15,10 +15,7 @@
                 <div class="sb-sidenav-menu-heading">Outros</div>
                 <a class="nav-link" href="charts.html"
                     ><div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                    Charts</a
-                ><a class="nav-link" href="tables.html"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                    Tables</a
+                    Dados do Dev</a
                 >
             </div>
         </div>
