--- a/src/app/clients/clients-form/clients-form.component.html
+++ b/src/app/clients/clients-form/clients-form.component.html
@@ -51,12 +51,16 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-2">
+                <div class="col-md-3">
                   <button type="submit" class="btn btn-success" >
                       <i class="fa fa-save"></i> Salvar
+                  </button>
+                  <button type="button" class="btn btn-danger ml-1" (click)="voltar()">
+                      <i class="fa fa-arrow-alt-circle-left"></i> Voltar
                   </button>
                 </div>
             </div>
         </form>
+        <br>
     </div>
 
