Implementação do metodo editar e Atualizar

--- a/src/app/clients/clients-form/clients-form.component.html
+++ b/src/app/clients/clients-form/clients-form.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Clientes</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Formulario de cadastro</li>
+        <li class="breadcrumb-item active">{{ client.id ? 'Edição' : 'Formulario de cadastro'}}</li>
     </ol>     
     <div class="container">
         <form #clientForm="ngForm" (ngSubmit)="onSubmit()">
@@ -52,11 +52,15 @@
             </div>
             <div class="row">
                 <div class="col-md-3">
-                  <button type="submit" class="btn btn-success" >
+                  <button type="submit" class="btn btn-success" *ngIf="!client.id" >
                       <i class="fa fa-save"></i> Salvar
                   </button>
-                  <button type="button" class="btn btn-danger ml-1" (click)="voltar()">
-                      <i class="fa fa-arrow-alt-circle-left"></i> Voltar
+                  <button type="submit" class="btn btn-success" *ngIf="client.id" >
+                    <i class="fa fa-sync-alt"></i> Atualizar
+                  </button>
+
+                  <button type="button" class="btn btn-primary ml-1" (click)="voltar()">
+                      <i class="fa fa-arrow-circle-left"></i> Voltar 
                   </button>
                 </div>
             </div>
