--- a/src/app/clients/clients-list/clients-list.component.html
+++ b/src/app/clients/clients-list/clients-list.component.html
@@ -3,6 +3,19 @@
         <li class="breadcrumb-item active">Consulta</li>
     </ol> 
 <div class="container">
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="alert alert-success" role="alert" *ngIf="mensagemSucesso">
+                
+                {{mensagemSucesso}}
+            </div>
+            <div class="alert alert-danger" role="alert" *ngIf="mensagemErro">
+                {{mensagemErro}}
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-2">
             <button class="btn btn-primary" (click)="novoClient()">
@@ -34,13 +47,31 @@
                                  routerLink="/clients-form/{{clients.id}}">
                                 <i class="fa fa-pencil-alt"></i>
                             </button>
-                            <button class="btn btn-danger ml-1">
+                            <button class="btn btn-danger ml-1" (click)="preparaDelecao(clients)"
+                                 data-toggle="modal" data-target="#modalDelecao">
                                 <i class="fa fa-trash-alt"></i>
                             </button>
                         </td>
                     </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div id="modalDelecao" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>Confirmação</h4>
+                </div>
+                <div class="modal-body" *ngIf="clientSelecionado">
+                   Deseja excluir: {{clientSelecionado.nome}} ?
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-success" (click)="deletarClient()" 
+                    data-dismiss="modal">Confirma </button>
+                    <button class="btn btn-danger" data-dismiss="modal">Cancela</button>
+                </div>
+            </div>
         </div>
     </div>
 </div>
