--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -12,6 +12,10 @@
                     ><div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
                     Clientes
                 </a>
+                <a class="nav-link collapsed" routerLink="provided-service-form" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fas fa-money"></i></div>
+                    Serviços Prestados
+                </a>
                 <div class="sb-sidenav-menu-heading">Outros</div>
                 <a class="nav-link" href="charts.html"
                     ><div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
