--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
                     Clientes
                 </a>
                 <a class="nav-link collapsed" routerLink="provided-service-form" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-money"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="far fa-money-bill-alt"></i></div>
                     Serviços Prestados
                 </a>
                 <div class="sb-sidenav-menu-heading">Outros</div>
