criação do HTML do listar e inicio da implementação dos metodos

--- a/src/app/clients/clients-form/clients-form.component.html
+++ b/src/app/clients/clients-form/clients-form.component.html
@@ -38,7 +38,8 @@
                     <div class="form-group">
                         <label>*Nome:</label>
                         <input type="text" class="form-control" name="nome"
-                        [(ngModel)]="client.nome">
+                        [(ngModel)]="client.nome"
+                        placeholder="Digite o nome do novo cliente">
                     </div>
                 </div>
 
@@ -46,7 +47,8 @@
                     <div class="form-group">
                         <label>*CPF:</label>
                         <input type="text" class="form-control" name="cpf"
-                        [(ngModel)]="client.cpf">
+                        [(ngModel)]="client.cpf"
+                        placeholder="Digite o CPF do novo cliente">
                     </div>
                 </div>
             </div>
