--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -16,6 +16,10 @@
                     ><div class="sb-nav-link-icon"><i class="far fa-money-bill-alt"></i></div>
                     Serviços Prestados
                 </a>
+                <a class="nav-link collapsed" routerLink="provided-service-list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fas fa-list-ol"></i></div>
+                    Listar Serviços 
+                </a>
                 <div class="sb-sidenav-menu-heading">Outros</div>
                 <a class="nav-link" href="charts.html"
                     ><div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
