Adição da funcionalidade consultar serviço prestado

--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -4,16 +4,16 @@
             <div class="nav">
                 <div class="sb-sidenav-menu-heading">Sistema</div>
                 <a class="nav-link" routerLink="/home"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                     Home</a
                 >
                 <div class="sb-sidenav-menu-heading">Cadastros</div>
                 <a class="nav-link collapsed" routerLink="clients-list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="fas fa-street-view"></i></div>
                     Clientes
                 </a>
                 <a class="nav-link collapsed" routerLink="provided-service-form" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
-                    ><div class="sb-nav-link-icon"><i class="far fa-money-bill-alt"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="fas fa-tools"></i></div>
                     Serviços Prestados
                 </a>
                 <a class="nav-link collapsed" routerLink="provided-service-list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
@@ -22,7 +22,7 @@
                 </a>
                 <div class="sb-sidenav-menu-heading">Outros</div>
                 <a class="nav-link" href="charts.html"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+                    ><div class="sb-nav-link-icon"><i class="fas fa-laptop-code"></i></div>
                     Dados do Dev</a
                 >
             </div>
