--- a/src/app/provided-service/provided-service-form/provided-service-form.component.html
+++ b/src/app/provided-service/provided-service-form/provided-service-form.component.html
@@ -67,7 +67,14 @@
             <div class="col-md-3">
                 <button type="submit" class="btn btn-success">
                     <i class="fa fa-save"></i>
-                    Salvar</button>
+                    Salvar
+                </button>
+
+                <button type="button" class="btn btn-primary ml-1" 
+                    routerLink="/provided-service-list">
+                    <i class="fa fa-arrow-alt-circle-left"></i>
+                    Voltar
+                </button>
             </div>
         </div>
     </form>
