--- a/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -26,11 +26,45 @@
         </div>
         <br/>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-6">
                 <button type="submit" class="btn btn-primary">
                     <i class="fa fa-search"></i> Consultar
+                </button>
+
+                <button type="button" class="btn btn-warning ml-1"
+                    routerLink="/provided-service-form">
+                    <i class="fa fa-plus"></i> Novo serviço
                 </button>
             </div>
         </div>
     </form>
+    <div class="row">
+        <br/>
+        <div class="col-md-12">
+            <br/>
+            <div class="alert alert-warning" role="alert" *ngIf="message">
+                {{message}}
+            </div>
+        </div>
+        <div class="col-md-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Cliente</th>
+                        <th>Descrição</th>
+                        <th>Valor</th>
+                        <th>Data</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let s of list">
+                        <td>{{ s.client.nome }}</td>
+                        <td>{{ s.descricao }}</td>
+                        <td>{{ s.valor }}</td>
+                        <td>{{ s.data }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
