finalização da tela de login

--- a/Front end/src/app/clients/clients-list/clients-list.component.html
+++ b/Front end/src/app/clients/clients-list/clients-list.component.html
@@ -44,7 +44,7 @@
                         <td>{{clients.dataCadastro}}</td>
                         <td>
                             <button class="btn btn-warning ml-1"
-                                 routerLink="/clients-form/{{clients.id}}">
+                                 routerLink="/clients/form/{{clients.id}}">
                                 <i class="fa fa-pencil-alt"></i>
                             </button>
                             <button class="btn btn-danger ml-1" (click)="preparaDelecao(clients)"
