--- a/Front end/src/app/provided-service/provided-service-form/provided-service-form.component.html
+++ b/Front end/src/app/provided-service/provided-service-form/provided-service-form.component.html
@@ -1,4 +1,4 @@
-<h1 class="mt-04">Serviço Prestado</h1>
+<h1 class="mt-4">Serviço Prestado</h1>
 <ol class="breadcrumb mb-04">
     <li class="breadcrumb-bitem active">Novo</li>
 </ol>
@@ -71,7 +71,7 @@
                 </button>
 
                 <button type="button" class="btn btn-primary ml-1" 
-                    routerLink="/provided-service-list">
+                    routerLink="/provided-service/list">
                     <i class="fa fa-arrow-alt-circle-left"></i>
                     Voltar
                 </button>
