--- a/Front end/src/app/provided-service/provided-service-list/provided-service-list.component.html
+++ b/Front end/src/app/provided-service/provided-service-list/provided-service-list.component.html
@@ -1,5 +1,5 @@
 <h1 class="mt-04">Serviço Prestado</h1>
-<ol class="breadcrumb mb-04">
+<ol class="breadcrumb mb-4">
     <li class="breadcrumb-bitem active">Consulta</li>
 </ol>
 
@@ -32,7 +32,7 @@
                 </button>
 
                 <button type="button" class="btn btn-warning ml-1"
-                    routerLink="/provided-service-form">
+                    routerLink="/provided-service/form">
                     <i class="fa fa-plus"></i> Novo serviço
                 </button>
             </div>
