--- a/Front end/src/app/template/sidebar/sidebar.component.html
+++ b/Front end/src/app/template/sidebar/sidebar.component.html
@@ -8,23 +8,18 @@
                     Home</a
                 >
                 <div class="sb-sidenav-menu-heading">Cadastros</div>
-                <a class="nav-link collapsed" routerLink="clients-list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                <a class="nav-link collapsed" routerLink="/clients/list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
                     ><div class="sb-nav-link-icon"><i class="fas fa-street-view"></i></div>
                     Clientes
                 </a>
-                <a class="nav-link collapsed" routerLink="provided-service-form" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                <a class="nav-link collapsed" routerLink="/provided-service/form" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
                     ><div class="sb-nav-link-icon"><i class="fas fa-tools"></i></div>
                     Serviços Prestados
                 </a>
-                <a class="nav-link collapsed" routerLink="provided-service-list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                <a class="nav-link collapsed" routerLink="/provided-service/list" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
                     ><div class="sb-nav-link-icon"><i class="fas fa-list-ol"></i></div>
                     Listar Serviços 
                 </a>
-                <div class="sb-sidenav-menu-heading">Outros</div>
-                <a class="nav-link" href="charts.html"
-                    ><div class="sb-nav-link-icon"><i class="fas fa-laptop-code"></i></div>
-                    Dados do Dev</a
-                >
             </div>
         </div>
         <div class="sb-sidenav-footer">
