--- a/Front end/src/app/login/login.component.html
+++ b/Front end/src/app/login/login.component.html
@@ -11,8 +11,11 @@
                                 </h3>
                             </div>
                             <div class="card-body">
-                                <div class="alert alert-danger" *ngIf="loginError">
-                                    Login e/ou senha incorretos(a).
+                                <div class="alert alert-success" *ngIf="mensagemSucesso">
+                                    {{mensagemSucesso}}
+                                </div>
+                                <div class="alert alert-danger" *ngFor="let error of errors">
+                                    {{ error}}
                                 </div>
 
                                 <form action="ngForm" (submit)="onSubmit()">
@@ -25,7 +28,7 @@
                                     </div>
                                     <div class="form-group">
                                         <label class="small mb-1">Senha</label>
-                                        <input type="text" name="password"
+                                        <input type="password" name="password"
                                             [(ngModel)]="password"
                                             class="form-control py-4"
                                             placeholder="Digite sua senha"/>
@@ -34,7 +37,8 @@
                                         <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">
                                             Enviar
                                         </button>
-                                        <button type="button" class="btn btn-success" *ngIf="cadastrando">
+                                        <button type="button" class="btn btn-success"
+                                            (click)="cadastrar()" *ngIf="cadastrando">
                                             Cadastrar
                                         </button>
                                         <button type="button" (click)="cancelarCadastro()" 
