implementação do recebimento do token e armazenamento local e passagem nas requisições rest

--- a/Front end/src/app/login/login.component.html
+++ b/Front end/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="bg-primary">
+<div style="background-color: #292b2c;">
     <div class="" id="layoutAuthentication">
         <div id="layoutAuthentication_content">
             <main>
