--- a/Front end/src/app/template/sidebar/sidebar.component.html
+++ b/Front end/src/app/template/sidebar/sidebar.component.html
@@ -20,9 +20,18 @@
                     ><div class="sb-nav-link-icon"><i class="fas fa-list-ol"></i></div>
                     Listar Serviços 
                 </a>
+
+                <div class="sb-sidenav-menu-heading">Sessão</div>
+
+                <a class="nav-link collapsed" (click)="logout();" href="#" data-toggle="collapse" data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts"
+                    ><div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
+                    Encerrar Sessão
+                </a>
             </div>
         </div>
         <div class="sb-sidenav-footer">
+            <div class="small">Usuário:</div>
+            {{ usuariologado }}
             <div class="small">App criado por:</div>
             André Luis Moreira
         </div>
