melhoria no home

--- a/Front end/src/app/template/home/home.component.html
+++ b/Front end/src/app/template/home/home.component.html
@@ -1,4 +1,12 @@
 <h1 class="mt-4">Home</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Bem vindo</li>
-    </ol>                       
+        <li class="breadcrumb-item active">Bem vindo {{usuario}}, O que você deseja fazer hoje ?</li>
+    </ol> 
+    <div class="container">
+        <div style="text-align: center;">
+            <img src="assets/logoFundo.png">  
+        </div>
+    </div>
+    
+    
+    
